# iec16022

./: .gitignore  AUTHORS  BUGS  CHANGELOG  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  autogen-clean.sh  autogen.sh  configure.ac  fuzzer.c  iec16022.1  iec16022.1.in  iec16022.c  iec16022ecc200.c  iec16022ecc200.h  image.c  image.h  libiec16022.pc.in  reedsol.c  reedsol.h  release.sh  winbuild.sh
.github/workflows/: codeql-analysis.yml
test/: Makefile.am  testsuite-example.utf8  testsuite.sh
